--- a/css/style.css
+++ b/css/style.css
@@ -352,3 +352,18 @@ header {
 #ps4 .ms_section-title p {
     padding: 20px 0;
 }
+
+/* playstation plus */
+#psplus {
+    background: rgb(193,189,188);
+}
+#psplus .ms_btn-round {
+    color: rgb(44,100,230);
+    background: rgb(218,219,220);
+}
+#psplus .ms_btn:hover {
+    border: 2px solid rgb(218,219,220);
+}
+#psplus p {
+    padding: 30px 0 10px;
+}
