--- a/css/style.css
+++ b/css/style.css
@@ -66,6 +66,35 @@
 .ms_gradient {
     height: 100%;
     background: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.9));
+    opacity: .3;
+    transition: .3s;
+}
+.ms_moving-text {
+    transform: translateY(25px);
+    opacity: 0;
+    transition: transform 1.5s, opacity .6s;
+}
+.ms_moving-logo {
+    transform: translateY(20px);
+    opacity: 0;
+    transition: transform 1s, opacity .6s;
+}
+header:hover~main #jumbotron .ms_moving-text,
+#jumbotron:hover .ms_moving-text,
+#game-adv:hover .ms_moving-text {
+    transform: translateY(0);
+    opacity: 1;
+}
+header:hover~main #jumbotron .ms_moving-logo,
+#jumbotron:hover .ms_moving-logo,
+#game-adv:hover .ms_moving-logo {
+    transform: translateY(0);
+    opacity: 1;
+}
+header:hover~main #jumbotron .ms_gradient,
+#jumbotron:hover .ms_gradient,
+#game-adv:hover .ms_gradient {
+    opacity: 1;
 }
 
 
